--- a/style.css
+++ b/style.css
@@ -19,18 +19,6 @@ h1 {
   text-align: center;
 }
 
-.header_img,
-.kiloren_img,
-.stormtr_img {
-  max-width: 100%;
-  width: 100%;
-}
-
-.ad_img,
-.r2d2_img {
-  max-width: 100%;
-}
-
 .header-menu {
   position: absolute;
   top: 1rem;
@@ -72,14 +60,6 @@ h1 {
   width: 470px;
 }
 
-.kiloren_img {
-  margin-top: 12.5rem;
-}
-
-.stormtr_img {
-  margin-top: 3.75rem;
-}
-
 .article_kiloren {
   margin-top: 2rem;
   width: 100%;
@@ -107,4 +87,8 @@ h1 {
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
+}
+
+.header-menu_phone {
+  display: none;
 }
